# dexdo-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  models.json
.claude/skills/dexdo-buy-model/: SKILL.md
.claude/skills/dexdo-install/: SKILL.md
.claude/skills/dexdo-sell-model/: SKILL.md
.github/workflows/: build.yml  ci.yml  release.yml
ci/: check-no-cyrillic.sh  check-single-sdk.sh  write-sha256-line.sh
contracts/: deployed.shellnet.json
contracts/airegistry/: InferenceOrderBook.sol  Makefile  ModelRegistry.sol  RootModel.sol  SuperRoot.sol  TokenContract.sol
contracts/compiled_0.79.3/airegistry/: InferenceOrderBook.abi.json  InferenceOrderBook.tvc  ModelRegistry.tvc  RootModel.tvc  SuperRoot.tvc  TokenContract.abi.json  TokenContract.tvc
contracts/compiled_0.79.3/dex/: Nullifier.tvc  Oracle.tvc  OracleEventList.tvc  OrderBook.tvc  PMP.tvc  PrivateNote.abi.json  PrivateNote.tvc  RootOracle.tvc  RootPN.tvc
crates/core/: Cargo.toml
crates/core/src/: handover.rs  lib.rs  machine.rs  manifest.rs  note.rs  onchain_diagnostics.rs  oracle_manifest.rs  params.rs  settle.rs  wallet.rs
crates/core/src/chain/: accounting.rs  mock.rs  mod.rs  types.rs
crates/core/src/shellnet/: backends.rs  book_events.rs  client.rs  contracts_provision.rs  legacy_giver.rs  mod.rs  note_events.rs  order_events.rs  stream_locks.rs  test_giver.rs
crates/core/tests/: invariant.rs
crates/dexdo/: Cargo.toml
crates/dexdo-proto/: Cargo.toml  build.rs
crates/dexdo-proto/proto/: dexdo.proto
crates/dexdo-proto/src/: lib.rs
crates/dexdo/src/: lib.rs  main.rs  registry.rs  wallet_seed.rs
crates/dexdo/src/buyer/: continuity.rs  mod.rs  render.rs  routing.rs  tls.rs  verify.rs
crates/dexdo/src/buyer/api/: anthropic.rs  mod.rs  openai.rs  stream.rs
crates/dexdo/src/cli/: admin.rs  args.rs  audit.rs  buyer.rs  close.rs  commands.rs  dashboard.rs  deals.rs  indexer.rs  machine.rs  market_views.rs  markets.rs  mod.rs  monitor.rs  note.rs  note_cmd.rs  oracle.rs  orders.rs  policy.rs  recover.rs  reports.rs  seller.rs  seller_policy.rs  support.rs
crates/dexdo/src/seller/: advance.rs  auth.rs  gateway.rs  mod.rs  models.rs  tls.rs
crates/dexdo/src/seller/upstream/: anthropic.rs  mock.rs  mod.rs  openai.rs
crates/dexdo/tests/: live_214_policy.rs  live_cli.rs  runtime_machine_contract.rs
