[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/dexdo-proto",
    "crates/dexdo",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
tonic = { version = "0.12", features = ["tls"] }
# self-signed TLS certificate of the gateway + fingerprint in the handover, pinned by the buyer.
# We reuse the rustls stack that tonic already pulls in(tokio-rustls/hyper-util), without a new TLS stack.
rcgen = "0.14"
sha2 = "0.10"
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http2"] }
tower = "0.4"
http = "1"
prost = "0.13"
tonic-build = "0.12"
# D6: vendored protoc -- a fallback in build.rs when PROTOC is not set, so that building
# proto does not require a system protoc on Linux/macOS/Windows.
protoc-bin-vendored = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-bip39 = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = "0.6"
hmac = "0.12"
pbkdf2 = { default-features = false, version = "0.12" }
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"
proptest = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
# Local interface to the consumer: OpenAI/Anthropic-compatible HTTP.
# axum 0.7 on the same hyper-1/tower stack that tonic already pulls in -- without a second HTTP stack.
axum = "0.7"
async-stream = "0.3"
# In-process HTTP client for the e2e consumer interface -- the same hyper-1 stack as tonic/axum.
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
# real OpenAI-compatible upstream(Groq), streaming SSE. rustls (not native
# OpenSSL), without a blocking stack; SSE parsing -- manually on top of bytes_stream(without a second HTTP stack).
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
# D6: platform config/data directories(Linux XDG / macOS App Support / Windows APPDATA)
# for the default endpoints-file path -- without hardcoding cwd and without assuming a separator.
directories = "5"
# regression tests compare the in-process derivation against the pinned TVM SDK default directly.
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.3-rc.an" }

# D6: the Windows blocker(tvm-sdk carried test files with ':' in the path, NTFS-invalid) is fixed UPSTREAM --
# tvmlabs/tvm-sdk, tag `v3.0.3-rc.an`. The fork `Futurizt/tvm-sdk` is removed, `[patch]` is dropped: gosh-ackinacki
# and the direct tvm pins point to clean upstream. Win/Linux/macOS build without workarounds.
