[package]
name = "dexdo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dexdo"
path = "src/main.rs"

[lib]
name = "dexdo"
path = "src/lib.rs"

[dependencies]
dexdo-core = { path = "../core" }
dexdo-proto = { path = "../dexdo-proto" }
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
# §3.1.3: TLS channel, fingerprint pinning.
rcgen.workspace = true
sha2.workspace = true
tokio-rustls.workspace = true
hyper-util.workspace = true
tower.workspace = true
http.workspace = true
# §10.6/G, B19/B20: local OpenAI/Anthropic-compatible consumer HTTP endpoint.
axum.workspace = true
async-stream.workspace = true
# Directive 3: real OpenAI-compatible upstream (Groq), streaming SSE.
reqwest.workspace = true
# D6: default platform path for the endpoints file (config/data dir).
directories.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hmac.workspace = true
k256.workspace = true
pbkdf2.workspace = true
tiny-bip39.workspace = true
zeroize.workspace = true
tvm_client = { workspace = true, optional = true }

[features]
# D10: real shellnet backend in the `dexdo` binary itself (per-role `RealSellerBackend`/`RealBuyerBackend`).
# OFF by default — the default (mock) build stays lightweight and cross-platform (D6); the real path
# (TVM SDK v3 via `dexdo-core/shellnet`) only under this feature.
shellnet = ["dexdo-core/shellnet", "dep:tvm_client"]
# D13 (hard rule): the giver (test faucet) is test-only — gated behind this NON-DEFAULT feature so the
# production `dexdo` binary contains zero giver. Only the live `live_cli` harness enables it.
test-giver = ["shellnet", "dexdo-core/test-giver"]

[dev-dependencies]
# Directive 5 / AGENTS.md §5: invariant property tests for routing/frame.
proptest.workspace = true
